# dft3c

./: README.rst  environment-cpu.yml  environment-gpu.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/dft3c/: __init__.py
src/dft3c/ase/: __init__.py  calculator.py
src/dft3c/gpu4pyscf/: dft.py
src/dft3c/pyscf/: d3.py  d4.py  dft.py  gcp.py  util.py
tests/: test_ase.py  test_gpu4pyscf.py  test_pyscf.py
