[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dft3c"
version = "0.1.0"
description = "Density function theory with corrections, DFT-3c"
readme = "README.rst"
license.text = "Apache-2.0"
urls.repository = "https://github.com/awvwgk/dft3c"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
   "pyscf",
   "dftd3>=1.3.1",
   "dftd4>=4",
]
optional-dependencies.ase = ["ase"]
optional-dependencies.test = [
  "pytest",
  "pytest-cov",
]
